--- a/src/app/core/nav-bar/nav-bar.component.html
+++ b/src/app/core/nav-bar/nav-bar.component.html
@@ -12,7 +12,7 @@
     <li><a routerLink="/contact">Contact Us</a></li>
     </ul>
   </div>
-  <div class="search-cart"> <a href="#"><i class="fas fa-search"></i></a> <a href="#"><i class="fas fa-user"></i></a> <a
+  <div class="search-cart"> <a href="#"><i class="fas fa-search"></i></a> <a  routerLink="/Login" ><i class="fas fa-user"></i></a> <a
       href="#"><i class="fas fa-heart"></i></a> <a href="#"><i class="fas fa-shopping-cart"></i><span
         class="cart-count">0</span></a> </div>
 </nav> <!-- Sidebar for mobile -->
